--- a/src/components/MainNavBar.scss
+++ b/src/components/MainNavBar.scss
@@ -50,10 +50,7 @@
 }
 
 .dropdown-menu{
-  width: 100% !important;
-  height: 100px !important;
-  display: flex;
-  flex-direction: row;
+  width: 240px !important;
   margin-top: 0px !important;
   background-color: #f5f5f5;
   border-radius: 10px !important;
