--- a/src/components/MainNavBar.scss
+++ b/src/components/MainNavBar.scss
@@ -42,7 +42,7 @@
 
 .menu-divider {
   background-color: rgba(0, 0, 0, 0.548);
-  height: 60px;
+  height: 50px;
   width: 0.25mm;
   //padding-bottom: 20px !important;
   padding: 0 0 0 0 !important;
@@ -50,7 +50,7 @@
 }
 
 .dropdown-menu{
-  width: 240px !important;
+  width: 100% !important;
   margin-top: 0px !important;
   background-color: #f5f5f5;
   border-radius: 10px !important;
