--- a/src/Navigation/Navbar.scss
+++ b/src/Navigation/Navbar.scss
@@ -7,7 +7,7 @@
 
 // Then add additional custom code here
 
-.mainNavBar{
+.navbarCustom{
   background-color: #f5f5f5;
   height: 100px;
   position: fixed;
