--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-html, body, #root, .App {
   height: fit-content !important;
 }
+
+/* html, body, #root, .App {
+  height: fit-content !important;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
